Refactor: ScoreArchive 전체 구조 변경